remove justified spacing, fix english

--- a/web/src/modules/Front/style.css
+++ b/web/src/modules/Front/style.css
@@ -94,7 +94,7 @@
                     font-size: 1.8rem;
                 }
                 .mischool-resume .card .info .para {
-                    text-align: justify;
+                    /*text-align: justify;*/
                     padding: 5px;
                     margin: 10px;
                 }
